@@ -1,4 +1,8 @@
-﻿drkns 16.08.2014 15:00:36 +0200 - build 4048
+﻿drkns 16.08.2014 15:16:54 +0200 - build 4049
+
+1. 0002766: не работает поиск, если в имени папки встречается запятая.
+
+drkns 16.08.2014 15:00:36 +0200 - build 4048
 
 1. С форума: плагин по F4 экспортирует файл по GetFiles, а после сохранения и выхода из редактора обратно файл не импортируется.
 
